--- a/styles.css
+++ b/styles.css
@@ -206,10 +206,63 @@ header a {
     width: 12.5%;
     text-align: center;
     padding: 2em .7em;
+    transition: transform 2s ease, width 2s ease, padding 2s ease, background-color 2s ease;
+}
+
+.achievement:hover {
+    width: 25%;
+    padding: 4em 1.4em;
+    background-color: lightcyan;
+    transform: rotate(360deg);
 }
 
 .achievement h2, p {
     margin: 0;
+}
+
+/* --------------sponsors section------------ */
+
+.our-sponsors {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.our-sponsors .intro {
+    text-align: center;
+    margin: 3em;
+    width: 50%;
+}
+
+.intro h1 {
+    font-size: 2.5em;
+    font-weight: 700;
+    margin-bottom: 0;
+}
+
+.sponsors-container {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+}
+
+.sponsors-container img {
+    width: 8%;
+}
+
+/* ----------------footer styles---------------- */
+
+footer {
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    margin-top: 5em;
+}
+
+footer div{
+    width: 75%;
+    padding: 1.5em;
+    background-color: #FFF4E7;
 }
 
 /* mobile devices css */
@@ -278,6 +331,22 @@ header a {
 
     .achievement {
         width: 80%;
+    }
+
+    /* sponsors section */
+
+    .our-sponsors .intro {
+        width: 100%;
+    }
+
+    .sponsors-container img {
+        width: 12%;
+    }
+
+    /* footer style */
+
+    footer div {
+        width: 100%;
     }
 
 }
